# cdc-sentinel

./: Cargo.toml  LICENSE-MIT  README.md
.githooks/: pre-commit
fixtures/galaga/: expected.json
fixtures/galaga/sdc/: apf_constraints.sdc  galaga_constraints.sdc
fixtures/genesis/: expected.json
fixtures/genesis/rtl/: mf_pllbase.v
fixtures/genesis/sdc/: genesis_constraints.sdc
fixtures/m72/: expected.json
fixtures/m72/sdc/: apf_constraints.sdc  m72_constraints.sdc
fixtures/m92/: expected.json
fixtures/m92/rtl/: core_pll.v  sdram_4w.v  sdram_pll.v  video_pll.v
fixtures/m92/sdc/: apf_constraints.sdc  m92_constraints.sdc
fixtures/msx/: expected.json
fixtures/msx/rtl/: mf_audio_pll.v
fixtures/msx/sdc/: apf_constraints.sdc  msx_constraints.sdc
fixtures/nes/: expected.json
fixtures/nes/sdc/: apf_constraints.sdc  nes_constraints.sdc
fixtures/pokemonmini/: expected.json
fixtures/pokemonmini/sdc/: pokemonmini_constraints.sdc
fixtures/snes/: expected.json
fixtures/snes/rtl/: cram.v
fixtures/snes/sdc/: apf_constraints.sdc  snes_constraints.sdc
fixtures/supervision/: expected.json
fixtures/supervision/rtl/: sdram.v
fixtures/wonderswan/: expected.json
fixtures/wonderswan/rtl/: ddram.v
src/: design.rs  error.rs  fix.rs  lib.rs  lint.rs  main.rs  patch.rs  report.rs  sdc.rs  source.rs
tests/: corpus.rs  fix_corpus.rs
