[workspace]

[package]
name = "cdc-sentinel"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Topology-aware clock-domain-crossing lints for FPGA cores: flags dead/phantom clock-group members and real external-memory crossings left unconstrained under a blanket asynchronous cut."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lucid-fpga/cdc-sentinel"
readme = "README.md"
keywords = ["fpga", "cdc", "sdc", "timing", "lint"]
categories = ["hardware-support", "development-tools", "command-line-utilities"]

[[bin]]
name = "cdc-sentinel"
path = "src/main.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
